Изменена четвёртая страница (не доделана)

--- a/src/blocks/drop-down/drop-down.pug
+++ b/src/blocks/drop-down/drop-down.pug
@@ -1,6 +1,6 @@
-mixin drop-down(elements)
-	div.drop-down
+mixin drop-down(options)
+	div.drop-down(class= options.bkg ? options.bkg : '')
 		select.drop-down__select
-				option(value="" disabled selected) Choose an option
-				each element in elements
-					option.drop-down__option #{element}
+				option(value="" disabled selected)= options.name ? options.name : 'Choose an option'
+				each element in options.elements
+					option.drop-down__option(class= options.bkg ? options.bkg : '')= element
