--- a/src/blocks/stages/stages.styl
+++ b/src/blocks/stages/stages.styl
@@ -14,7 +14,7 @@ $inactive-color = #E5E5E5;
 	color: $stages-text-color;
 
 
-	& > li
+	&__stage
 		position: relative;
 		display: table-cell;
 		text-align: center;
@@ -33,7 +33,7 @@ $inactive-color = #E5E5E5;
 			line-height: 2.5em;
 			border-radius: 100%;
 			position: relative;
-			z-index: 1000;
+			z-index: 5;
 			font-family: LatoWebBlack, 'Arial';
 
 		&:after
