--- a/src/main.pug
+++ b/src/main.pug
@@ -72,7 +72,10 @@ html(lang="en")
             +slider-continuous()
     .container__center.clearfix
       h2 stages
-      +stages(5,3)
+      +stages({
+        count: 5,
+        completed: 3
+      })
     .container__center.clearfix
       h2 form elements
       .container__left
@@ -88,7 +91,7 @@ html(lang="en")
       .container__left
         h2 search / drop-down
         +search()
-        +drop-down(['Orange','Apple','Pear'])
+        +drop-down({elements: ['Orange','Apple','Pear']})
       .container__right
         h2 user profile
         +user-profile({
