--- a/src/order.pug
+++ b/src/order.pug
@@ -14,5 +14,33 @@ head
 body
 include ./blocks/market/market.pug
 include ./blocks/stages/stages.pug
+include ./blocks/order/order.pug
+include ./blocks/drop-down/drop-down.pug
+include ./blocks/toggle/toggle.pug
+include ./blocks/tick-box/tick-box.pug
 +market__header()
-+stages(3,2)
+.order
+	.order__stages
+		.order__steps
+			div.order__stages-step_one Выбор товара
+			div.order__stages-step_one Заказ
+			div.order__stages-step_one Оплата
+		+stages({
+			count: 3,
+			completed: 2,
+			clr: 'order__stages-color'
+		})
+	.order__stuffs
+		+order__cart([{imgsrc: './blocks/market/img/1-1.jpg', name: 'Милый кролик', price: '4000'},
+					{imgsrc: './blocks/market/img/1-2.jpg', name: 'Коврик Мышь', price: '4700'},
+					{imgsrc: './blocks/market/img/1-3.jpg', name: 'Пегас Сатана', price: '7000'}
+				])
+	h2.order__delivery-title Способ доставки и оплата
+	.order__delivery
+		+drop-down({
+			elements: ['Россия','Казахстан','Украина'],
+			name: 'Страна доставки',
+			bkg: 'order__select-country_bkg'
+			})
+		+toggle()
+		+tick-box()
