--- a/src/blocks/toggle/toggle.styl
+++ b/src/blocks/toggle/toggle.styl
@@ -9,19 +9,22 @@ $label-on-background-color = #4eb7a8;
   position: relative;
   display: inline-block;
   vertical-align: top;
-  width: 3.7rem;
+  width: 4rem;
   height: 1.5rem;
   padding: 0.18rem;
   background-color: $toggle-background ;
   border-radius: 11px;
   cursor: pointer;
+  box-sizing: border-box;
+
+  & > *
+    box-sizing: border-box;
 
   &__input
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0;
-
 
   &__label
     position: relative;
@@ -38,7 +41,7 @@ $label-on-background-color = #4eb7a8;
 
   &__handle
     position: absolute;
-    top: 0.4rem;
+    top: 0.37rem;
     left: 0.4rem;
     width: 1.1rem;
     height: 1.1rem;
