--- a/src/order.pug
+++ b/src/order.pug
@@ -18,6 +18,7 @@ include ./blocks/order/order.pug
 include ./blocks/drop-down/drop-down.pug
 include ./blocks/toggle/toggle.pug
 include ./blocks/tick-box/tick-box.pug
+include ./blocks/standart-button/standart-button.pug
 +market__header()
 .order
 	.order__stages
@@ -35,12 +36,44 @@ include ./blocks/tick-box/tick-box.pug
 					{imgsrc: './blocks/market/img/1-2.jpg', name: 'Коврик Мышь', price: '4700'},
 					{imgsrc: './blocks/market/img/1-3.jpg', name: 'Пегас Сатана', price: '7000'}
 				])
-	h2.order__delivery-title Способ доставки и оплата
+
 	.order__delivery
-		+drop-down({
-			elements: ['Россия','Казахстан','Украина'],
-			name: 'Страна доставки',
-			bkg: 'order__select-country_bkg'
+		h2.order__delivery-title  Доставка и оплата
+		.order__country
+			+drop-down({
+				elements: ['Россия','Казахстан','Украина'],
+				name: 'Страна доставки',
+				bkg: 'order__select-country_bkg'
+				})
+		.order__premium-delivery
+			.order__premium-delivery-flag
+				+toggle({
+					on: 'Yes',
+					off: 'No',
+					bkg: 'order__premium-delivery-toggle_bkg',
+					state: true
+				})
+			.order__premium-delivery-description
+				| Используйте премиум доставку, 
+				| чтобы получить заказ в более надежной и усиленной упаковке.
+		.order__premium-delivery-payment
+			.order__premium-delivery-payment-text 
+				b Способ оплаты
+			.order__premium-delivery-payment-way
+				.order__premium-delivery-paypal.
+					#[+tick-box({bkg: 'order__premium-delivery-payment-tickbox'})]
+					PayPal
+				.order__premium-delivery-card.
+					#[+tick-box({bkg: 'order__premium-delivery-payment-tickbox'})]
+					Кредитная карта
+				.order__premium-delivery-prepay.
+					#[+tick-box({bkg: 'order__premium-delivery-payment-tickbox'})]
+					Предоплата
+		.order__payment-button
+			+standart-button({
+				type: 'normal',
+				size: 'normal',
+				text_color: 'order__payment-button-text',
+				bkg: 'order__payment-button-bkg',
+				text: 'Перейти к оплате ˃'
 			})
-		+toggle()
-		+tick-box()
