--- a/src/blocks/slider-discret/slider-discret.pug
+++ b/src/blocks/slider-discret/slider-discret.pug
@@ -1,2 +1,2 @@
 mixin slider-discret()
-	<input class="slider-discret" type="range" min="0" max="100" step="25">
+    input(class="slider-discret" type="range" min="0" max="100" step="25")
