--- a/src/blocks/toggle/toggle.styl
+++ b/src/blocks/toggle/toggle.styl
@@ -54,8 +54,7 @@ $label-on-background-color = #4eb7a8;
 
 .toggle__label:before, .toggle__label:after {
   position: absolute;
-  top: 50%;
-  margin-top: -.5em;
+  margin-top: .6em;
   line-height: 1;
   font-family: LatoWebBlack, 'Arial';
 }
