--- a/src/main.pug
+++ b/src/main.pug
@@ -31,21 +31,21 @@ html(lang="en")
       h2 standart buttons
 
       +standart-button({
-				type: 'nomral',
-				size: 'small',
-			})
+                type: 'nomral',
+                size: 'small',
+            })
       +standart-button({
-				type: 'nomral',
-				size: 'normal',
-			})
+                type: 'nomral',
+                size: 'normal',
+            })
       +standart-button({
-				type: 'error',
-				size: 'normal'
-			})
+                type: 'error',
+                size: 'normal'
+            })
       +standart-button({
-				type: 'error',
-				size: 'small'
-			})
+                type: 'error',
+                size: 'small'
+            })
 
       h2 arrow buttons
 
@@ -67,15 +67,15 @@ html(lang="en")
       h2 sliders
     .container__center.clearfix
         .container__left
-            +slider-discret()
-        .container__right
             +slider-continuous()
-    .container__center.clearfix
-      h2 stages
-      +stages({
-        count: 5,
-        completed: 3
-      })
+        .container__right
+            +slider-discret()
+    //- .container__center.clearfix
+    //-   h2 stages
+    //-   +stages({
+    //-     count: 5,
+    //-     completed: 3
+    //-   })
     .container__center.clearfix
       h2 form elements
       .container__left
