--- a/src/main.pug
+++ b/src/main.pug
@@ -70,12 +70,12 @@ html(lang="en")
             +slider-continuous()
         .container__right
             +slider-discret()
-    //- .container__center.clearfix
-    //-   h2 stages
-    //-   +stages({
-    //-     count: 5,
-    //-     completed: 3
-    //-   })
+    .container__center.clearfix
+      h2 stages
+      +stages({
+        count: 5,
+        completed: 3
+      })
     .container__center.clearfix
       h2 form elements
       .container__left
