--- a/src/order.pug
+++ b/src/order.pug
@@ -28,8 +28,7 @@ include ./blocks/standart-button/standart-button.pug
             div.order__stages-step_one Оплата
         +stages({
             count: 3,
-            completed: 2,
-            clr: 'order__stages-color'
+            completed: 2
         })
     .order__stuffs
         +order__cart([{imgsrc: './blocks/market/img/1-1.jpg', name: 'Милый кролик', price: '4000'},
