--- a/src/blocks/slider-discret/slider-discret.styl
+++ b/src/blocks/slider-discret/slider-discret.styl
@@ -1,4 +1,3 @@
-$max-width = 260px;
 
 .rangeslider-discret 
     display: block;
@@ -28,7 +27,6 @@ $max-width = 260px;
 
 
     &_horizontal 
-        max-width: $max-width;
         height: 5px;
         width: 100%;
         touch-action: pan-y;
@@ -44,7 +42,7 @@ $max-width = 260px;
         font-family: LatoWebBlack, 'Arial';
         color: #E6E6E6;
         padding-top: 0.7rem;
-        width: $max-width + 10px;
+        width: 105%;
 
 
         &:after
