--- a/src/blocks/calendar/calendar.styl
+++ b/src/blocks/calendar/calendar.styl
@@ -7,14 +7,14 @@ $default-date-background = #F2F2F2;
 $button-today-color = #E5E5E5;
 
 .calendar
-    max-width: 17rem;
+
 
     & .ui-datepicker-year
         display: none;
 
     & .ui-datepicker
         padding: 0;
-        max-width: 17rem;
+        width: 100%;
 
     & .ui-datepicker table
         margin: 0 0 .1em;
