--- a/src/blocks/container/container.styl
+++ b/src/blocks/container/container.styl
@@ -1,6 +1,6 @@
 .container
     margin: 0 auto;
-    width 700px;
+    width: 600px;
 
     h2
         text-transform: uppercase;
@@ -10,7 +10,7 @@
         font-size: 1.2rem;
 
     .percentages
-        margin-right: 25px;
+        margin-right: 22px;
 
     .arrow-button
         margin-left: 10px;
@@ -29,9 +29,6 @@
     & .news, .event
         text-align: left;
 
-    & .video
-        padding-left: 5%;
-
     &__center
         text-align: center;
 
@@ -42,6 +39,8 @@
     &__left
         width: 50%;
         float: left;
+        box-sizing: border-box;
+        padding-right: 3%;
 
         & > *
             margin-left: auto;
@@ -50,6 +49,8 @@
     &__right
         width: 50%;
         float: right;
+        box-sizing: border-box;
+        padding-left: 3%;
 
         & > *
             margin-left: auto;
@@ -83,16 +84,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-right: 0;
   }
-    .container .container__left > *, .container .container__right  > * {
-        padding-left: 0;
-        left: 0;
-    }
 
   .container__right {
         float: none;
         width: inherit;
         padding-left: 0;
-        left: 0;
   }
 }
