--- a/src/blocks/event/event.pug
+++ b/src/blocks/event/event.pug
@@ -17,6 +17,5 @@ mixin event(options)
                     type: options.btn_type ? options.btn_type : 'standart',
                     text: options.btn_text ? options.btn_text : 'button',
                     size: options.btn_size ? options.btn_sie : 'small',
-                    bkg: options.btn_bkg ? options.btn_bkg : '', 
-                    text_color: options.btn_clr ? options.btn_clr : ''
+                    theme: options.theme_button ? options.theme_button : '', 
                     })
