--- a/src/blocks/messager/messager.pug
+++ b/src/blocks/messager/messager.pug
@@ -44,6 +44,5 @@ mixin messager(options)
                                     type: 'nomral',
                                     size: 'normal',
                                     text: 'reply',
-                                    bkg: options.btn_bkg,
-                                    text_color: options.btn_clr
+                                    theme: options.theme ? options.theme : '',
                 })
