--- a/src/main.pug
+++ b/src/main.pug
@@ -6,6 +6,8 @@ html(lang="en")
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     title Site_2
     script(src= 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAfaOl0X5qQf4yJIocRvRey0yE9liHwVIA')
+    link(rel="icon" type="image/vnd.microsoft.icon" href='favicon.ico')
+    link(rel='mask-icon' href='images/fav.svg' color='red')
   body
   include blocks/arrow-button/arrow-button.pug
   include blocks/percentages/percentages.pug
