--- a/src/pages/seller/seller.pug
+++ b/src/pages/seller/seller.pug
@@ -2,16 +2,14 @@ include ./../../blocks/messager/messager.pug
 include ./../../blocks/standart-button/standart-button.pug
 
 mixin seller__messager(options)
-    .seller__messager
-        .seller__messager_hide chat
-        span= options.photo2
+    .js-seller__messager.seller__messager
+        .js-seller__messager_hide.seller__messager_hide chat
         +messager({
             theme_name: options.theme_name,
             theme_info: options.theme_info,
             name: options.name,
             photo: options.photo,
-            btn_bkg:  options.btn_bkg,
-            btn_clr: options.btn_clr
+            theme: options.theme_button
         })
 
 
@@ -20,4 +18,4 @@ mixin seller__stuff(options)
         img.seller__stuff-img(src= options.imgsrc)
         a.seller__stuff-name(href=options.name)= options.name
         div.seller__stuff-price= options.price + ' ₽'
-        +standart-button({type: 'normal', size: 'normal', text: 'купить', bkg: 'market__buy-button', text_color: 'market__buy-button-text'})
+        +standart-button({type: 'normal', size: 'normal', text: 'купить', theme: 'buy'})
