--- a/src/seller.pug
+++ b/src/seller.pug
@@ -1,90 +1,89 @@
 <!DOCTYPE html>
 html(lang="en")
-head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Андрей Иванов
-    style(type='text/css').
-        * {
-                padding: 0;
-                margin: 0;
-                box-sizing: border-box;
-        }
-body
-include ./pages/market/market.pug
-include ./pages/seller/seller.pug
-include ./blocks/news/news.pug
-include ./blocks/event/event.pug
-include ./blocks/feedback/feedback.pug
-+market__header()
-.seller
-    +market__seller({
-        imgsrc: 'av1.jpg', name: 'Андрей Иванов', city: 'г. Томск', theme: 'seller', rep: 39
-    })
-    +seller__messager({
-        name: 'Андрей Иванов',
-        photo: '.\\blocks\\user-profile\\img\\av1.jpg',
-        btn_bkg: 'seller__chat-button',
-        btn_clr: 'seller__helper-button_text',
-        theme_name: 'seller',
-        theme_info: 'seller'
-    })
-    .seller__text Новости
-    .seller__events
-        +event({
-            title: 'СКИДКА НА СТЕКЛО',
-            day: '17',
-            imgsrc: '.\\blocks\\event\\img\\glass.jpg',
-            month: 'Фев',
-            description: 'Скидка 40% на все товары из стекла.',
-            btn_text: 'Получить',
-            btn_size: 'normal',
-            btn_bkg: 'seller__events-button',
-            btn_clr: 'seller__events-button-text',
-            theme: 'black'
-        })
-        +news({
-            theme: 'black',
-            title: 'Игрушки из фетра',
-            date: '9 февраля 2017',
-            imgsrc: '.\\blocks\\news\\img\\felt.jpeg',
-            description: 'В продажу поступили игрушки из фетра!'
-        })
-        +news({
-            theme: 'black',
-            title: 'Железо',
-            date: '15 декабря 2017',
-            imgsrc: '.\\blocks\\news\\img\\heli.jpg',
-            description: 'Распродажа поделок из советского конструктора.'
-        })
-    .seller__text товар
-    .seller__stuffs
-        +seller__stuff({imgsrc: './pages/market/img/1-3.jpg', name: 'Пегас Сатана', price: '7200'})
-        +seller__stuff({imgsrc: './pages/market/img/1-1.jpg', name: 'Милый Кролик', price: '5000'})
-        +seller__stuff({imgsrc: './pages/market/img/1-2.jpg', name: 'Коврик Мышь', price: '700'})
-        +seller__stuff({imgsrc: './pages/market/img/1-4.jpg', name: 'Медальница', price: '1300'})
-        +seller__stuff({imgsrc: './pages/market/img/1-5.jpg', name: 'Записная книжка', price: '2500'})
-    .seller__stuffs
-        +seller__stuff({imgsrc: './pages/market/img/1-6.jpg', name: 'Картина', price: '1700'})
-        +seller__stuff({imgsrc: './pages/market/img/1-7.jpg', name: 'Кружка', price: '700'})
-        +seller__stuff({imgsrc: './pages/market/img/1-8.jpg', name: 'Бульдог', price: '5000'})
-        +seller__stuff({imgsrc: './pages/market/img/1-9.jpg', name: 'Шкатулка', price: '3000'})
-        +seller__stuff({imgsrc: './pages/market/img/1-10.jpg', name: 'Мячи из ниток', price: '1500'})
-    .seller__text.seller__comments-count 2 комментария
-    .seller__comments-body
-        ul.seller__comments-list
-            li.seller__comments-item
-                h3
-                    | Николай
-                p.seller__comments-comment Прекрасный продовец, я всем доволен!
-            li.seller__comments-item
-                h3
-                    | Юрий
-                p.seller__comments-comment Ужасный продавец, я разачарован!
-    .seller__comments-form
-        +feedback({
-            btn_text: 'Отправить',
-            btn_bkg: 'seller__comments-btn',
-            btn_clr: 'seller__comments-btn-text'
-        })
+    head
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        title Андрей Иванов
+        link(rel="icon" type="image/vnd.microsoft.icon" href='favicon.ico')
+        link(rel='mask-icon' href='images/fav.svg' color='red')
+        style(type='text/css').
+            * {
+                    padding: 0;
+                    margin: 0;
+                    box-sizing: border-box;
+            }
+    body
+        include ./pages/market/market.pug
+        include ./pages/seller/seller.pug
+        include ./blocks/news/news.pug
+        include ./blocks/event/event.pug
+        include ./blocks/feedback/feedback.pug
+        +market__header()
+        .seller
+            +market__seller({
+                imgsrc: 'av1.jpg', name: 'Андрей Иванов', city: 'г. Томск', theme: 'seller', rep: 39
+            })
+            +seller__messager({
+                name: 'Андрей Иванов',
+                photo: '.\\blocks\\user-profile\\img\\av1.jpg',
+                theme_button: 'seller',
+                theme_name: 'seller',
+                theme_info: 'seller'
+            })
+            .seller__text Новости
+            .seller__events
+                +event({
+                    title: 'СКИДКА НА СТЕКЛО',
+                    day: '17',
+                    imgsrc: '.\\blocks\\event\\img\\glass.jpg',
+                    month: 'Фев',
+                    description: 'Скидка 40% на все товары из стекла.',
+                    btn_text: 'Получить',
+                    btn_size: 'normal',
+                    theme_button: 'event-yellow',
+                    theme: 'black'
+                })
+                +news({
+                    theme: 'black',
+                    title: 'Игрушки из фетра',
+                    date: '9 февраля 2017',
+                    imgsrc: '.\\blocks\\news\\img\\felt.jpeg',
+                    description: 'В продажу поступили игрушки из фетра!'
+                })
+                +news({
+                    theme: 'black',
+                    title: 'Железо',
+                    date: '15 декабря 2017',
+                    imgsrc: '.\\blocks\\news\\img\\heli.jpg',
+                    description: 'Распродажа поделок из советского конструктора.'
+                })
+            .seller__text товар
+            .seller__stuffs
+                +seller__stuff({imgsrc: './pages/market/img/1-3.jpg', name: 'Пегас Сатана', price: '7200'})
+                +seller__stuff({imgsrc: './pages/market/img/1-1.jpg', name: 'Милый Кролик', price: '5000'})
+                +seller__stuff({imgsrc: './pages/market/img/1-2.jpg', name: 'Коврик Мышь', price: '700'})
+                +seller__stuff({imgsrc: './pages/market/img/1-4.jpg', name: 'Медальница', price: '1300'})
+                +seller__stuff({imgsrc: './pages/market/img/1-5.jpg', name: 'Записная книжка', price: '2500'})
+            .seller__stuffs
+                +seller__stuff({imgsrc: './pages/market/img/1-6.jpg', name: 'Картина', price: '1700'})
+                +seller__stuff({imgsrc: './pages/market/img/1-7.jpg', name: 'Кружка', price: '700'})
+                +seller__stuff({imgsrc: './pages/market/img/1-8.jpg', name: 'Бульдог', price: '5000'})
+                +seller__stuff({imgsrc: './pages/market/img/1-9.jpg', name: 'Шкатулка', price: '3000'})
+                +seller__stuff({imgsrc: './pages/market/img/1-10.jpg', name: 'Мячи из ниток', price: '1500'})
+            .seller__text.seller__comments-count 2 комментария
+            .seller__comments-body
+                ul.seller__comments-list
+                    li.seller__comments-item
+                        h3
+                            | Николай
+                        p.seller__comments-comment Прекрасный продовец, я всем доволен!
+                    li.seller__comments-item
+                        h3
+                            | Юрий
+                        p.seller__comments-comment Ужасный продавец, я разачарован!
+            .seller__comments-form
+                +feedback({
+                    btn_text: 'Отправить',
+                    theme: 'feedback'
+                })
