--- a/src/stuff.pug
+++ b/src/stuff.pug
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 html(lang="en")
-head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Пегас Сатана
-    style(type='text/css').
-        * {
-                padding: 0;
-                margin: 0;
-                box-sizing: border-box;
-        }
-    script(src= 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAfaOl0X5qQf4yJIocRvRey0yE9liHwVIA')
-body
-include ./pages/market/market.pug
-include ./pages/seller/seller.pug
-include ./blocks/standart-button/standart-button.pug
-include ./blocks/percentages/percentages.pug
-include ./blocks/standart-button/standart-button.pug
-include ./blocks/messager/messager.pug
-include ./blocks/location/location.pug
+    head
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        title Пегас Сатана
+        link(rel="icon" type="image/vnd.microsoft.icon" href='favicon.ico')
+        link(rel='mask-icon' href='images/fav.svg' color='red')
+        style(type='text/css').
+            * {
+                    padding: 0;
+                    margin: 0;
+                    box-sizing: border-box;
+            }
+        script(src= 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAfaOl0X5qQf4yJIocRvRey0yE9liHwVIA')
+            body
+        include ./pages/market/market.pug
+        include ./pages/seller/seller.pug
+        include ./blocks/standart-button/standart-button.pug
+        include ./blocks/percentages/percentages.pug
+        include ./blocks/messager/messager.pug
+        include ./blocks/location/location.pug
 
-.stuff
-    +market__header()
-    +seller__messager({
-            bkg: 'seller__chat-bkg',
-            text_color: 'seller__chat-text',
-            name: 'Андрей Иванов',
-            photo: '.\\blocks\\user-profile\\img\\av1.jpg',
-            theme_name: 'seller',
-            theme_info: 'seller'
-    })
-    .stuff__container
-        +market__seller({
-            imgsrc: 'av1.jpg', name: 'Андрей Иванов', city: 'г. Томск', bkg: 'seller__bkg', rep: 39
-        })
-        .stuff__element
-            .stuff__name Пегас Сатана - 7200 ₽
-            img.stuff__photo(src= './pages/market/img/1-3.jpg', alt='pegasus')
-            .stuff__description.
-                    Пегас выполнен в технике сухого валяния. Шерсть натуральная 100 %.  Глаза стеклянные. Крылья , натуральные перья. Размер 15 ×17 ×5 см. Отличный подарок или сувенир на любой случай. Почтовая пересылка 250 руб. 
-            .stuff__buy-button
-                +standart-button({type: 'normal', size: 'normal', text: 'купить', bkg: 'market__buy-button', text_color: 'market__buy-button-text'})
-    +location({
-        lat: '56.47591389',
-        lng: '84.95652974',
-        phrase: 'Самовывоз',
-        adress: 'Фрунзе 11б',
-        theme: 'stuff'
-    })
+        .stuff
+            +market__header()
+            +seller__messager({
+                    theme_button: 'seller',
+                    name: 'Андрей Иванов',
+                    photo: '.\\blocks\\user-profile\\img\\av1.jpg',
+                    theme_name: 'seller',
+                    theme_info: 'seller'
+            })
+            .stuff__container
+                +market__seller({
+                    imgsrc: 'av1.jpg', name: 'Андрей Иванов', city: 'г. Томск', theme: 'gold-seller', rep: 39
+                })
+                .stuff__element
+                    .stuff__name Пегас Сатана - 7200 ₽
+                    img.stuff__photo(src= './pages/market/img/1-3.jpg', alt='pegasus')
+                    .stuff__description.
+                            Пегас выполнен в технике сухого валяния. Шерсть натуральная 100 %.  Глаза стеклянные. Крылья , натуральные перья. Размер 15 ×17 ×5 см. Отличный подарок или сувенир на любой случай. Почтовая пересылка 250 руб. 
+                    .stuff__buy-button
+                        +standart-button({type: 'normal', size: 'normal', text: 'купить', theme: 'buy'})
+            +location({
+                lat: '56.47591389',
+                lng: '84.95652974',
+                phrase: 'Самовывоз',
+                adress: 'Фрунзе 11б',
+                theme: 'stuff'
+            })
