--- a/src/order.pug
+++ b/src/order.pug
@@ -1,3 +1,11 @@
+include ./blocks/market/market__header/market__header.pug
+include ./blocks/order/order__cart/order__cart.pug
+include ./blocks/order/order__stuffs/order__stuffs.pug
+include ./blocks/stages/stages.pug
+include ./blocks/drop-down/drop-down.pug
+include ./blocks/toggle/toggle.pug
+include ./blocks/tick-box/tick-box.pug
+include ./blocks/standart-button/standart-button.pug
 <!DOCTYPE html>
 html(lang="en")
     head
@@ -14,13 +22,6 @@ html(lang="en")
                     box-sizing: border-box;
             }
     body
-        include ./pages/market/market.pug
-        include ./pages/order/order.pug
-        include ./blocks/stages/stages.pug
-        include ./blocks/drop-down/drop-down.pug
-        include ./blocks/toggle/toggle.pug
-        include ./blocks/tick-box/tick-box.pug
-        include ./blocks/standart-button/standart-button.pug
         +market__header()
         .order
             .order__stages
@@ -35,9 +36,9 @@ html(lang="en")
                     line_active_theme: 'order'
                 })
             .order__stuffs
-                +order__cart([{imgsrc: './pages/market/img/1-1.jpg', name: 'Милый кролик', price: '4000'},
-                            {imgsrc: './pages/market/img/1-2.jpg', name: 'Коврик Мышь', price: '4700'},
-                            {imgsrc: './pages/market/img/1-3.jpg', name: 'Пегас Сатана', price: '7000'}
+                +order__cart([{imgsrc: './blocks/market/market__stuffs/img/1-1.jpg', name: 'Милый кролик', price: '4000'},
+                            {imgsrc: './blocks/market/market__stuffs/img/1-2.jpg', name: 'Коврик Мышь', price: '4700'},
+                            {imgsrc: './blocks/market/market__stuffs/img/1-3.jpg', name: 'Пегас Сатана', price: '7000'}
                         ])
 
             .order__delivery
