--- a/src/seller.pug
+++ b/src/seller.pug
@@ -1,3 +1,10 @@
+include ./blocks/market/market__header/market__header.pug
+include ./blocks/market/market__seller/market__seller.pug
+include ./blocks/seller/seller__messager/seller__messager.pug
+include ./blocks/seller/seller__stuff/seller__stuff.pug
+include ./blocks/news/news.pug
+include ./blocks/event/event.pug
+include ./blocks/feedback/feedback.pug
 <!DOCTYPE html>
 html(lang="en")
     head
@@ -14,11 +21,6 @@ html(lang="en")
                     box-sizing: border-box;
             }
     body
-        include ./pages/market/market.pug
-        include ./pages/seller/seller.pug
-        include ./blocks/news/news.pug
-        include ./blocks/event/event.pug
-        include ./blocks/feedback/feedback.pug
         +market__header()
         .seller
             +market__seller({
@@ -60,17 +62,17 @@ html(lang="en")
                 })
             .seller__text товар
             .seller__stuffs
-                +seller__stuff({imgsrc: './pages/market/img/1-3.jpg', name: 'Пегас Сатана', price: '7200'})
-                +seller__stuff({imgsrc: './pages/market/img/1-1.jpg', name: 'Милый Кролик', price: '5000'})
-                +seller__stuff({imgsrc: './pages/market/img/1-2.jpg', name: 'Коврик Мышь', price: '700'})
-                +seller__stuff({imgsrc: './pages/market/img/1-4.jpg', name: 'Медальница', price: '1300'})
-                +seller__stuff({imgsrc: './pages/market/img/1-5.jpg', name: 'Записная книжка', price: '2500'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-3.jpg', name: 'Пегас Сатана', price: '7200'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-1.jpg', name: 'Милый Кролик', price: '5000'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-2.jpg', name: 'Коврик Мышь', price: '700'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-4.jpg', name: 'Медальница', price: '1300'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-5.jpg', name: 'Записная книжка', price: '2500'})
             .seller__stuffs
-                +seller__stuff({imgsrc: './pages/market/img/1-6.jpg', name: 'Картина', price: '1700'})
-                +seller__stuff({imgsrc: './pages/market/img/1-7.jpg', name: 'Кружка', price: '700'})
-                +seller__stuff({imgsrc: './pages/market/img/1-8.jpg', name: 'Бульдог', price: '5000'})
-                +seller__stuff({imgsrc: './pages/market/img/1-9.jpg', name: 'Шкатулка', price: '3000'})
-                +seller__stuff({imgsrc: './pages/market/img/1-10.jpg', name: 'Мячи из ниток', price: '1500'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-6.jpg', name: 'Картина', price: '1700'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-7.jpg', name: 'Кружка', price: '700'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-8.jpg', name: 'Бульдог', price: '5000'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-9.jpg', name: 'Шкатулка', price: '3000'})
+                +seller__stuff({imgsrc: './blocks/market/market__stuffs/img/1-10.jpg', name: 'Мячи из ниток', price: '1500'})
             .seller__text.seller__comments-count 2 комментария
             .seller__comments-body
                 ul.seller__comments-list
