--- a/src/stuff.pug
+++ b/src/stuff.pug
@@ -1,3 +1,10 @@
+include ./blocks/market/market__header/market__header.pug
+include ./blocks/market/market__seller/market__seller.pug
+include ./blocks/seller/seller__messager/seller__messager.pug
+include ./blocks/seller/seller__stuff/seller__stuff.pug
+include ./blocks/standart-button/standart-button.pug
+include ./blocks/messager/messager.pug
+include ./blocks/location/location.pug
 <!DOCTYPE html>
 html(lang="en")
     head
@@ -13,15 +20,7 @@ html(lang="en")
                     margin: 0;
                     box-sizing: border-box;
             }
-        script(src= 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAfaOl0X5qQf4yJIocRvRey0yE9liHwVIA')
-            body
-        include ./pages/market/market.pug
-        include ./pages/seller/seller.pug
-        include ./blocks/standart-button/standart-button.pug
-        include ./blocks/percentages/percentages.pug
-        include ./blocks/messager/messager.pug
-        include ./blocks/location/location.pug
-
+    body
         .stuff
             +market__header()
             +seller__messager({
@@ -37,7 +36,7 @@ html(lang="en")
                 })
                 .stuff__element
                     .stuff__name Пегас Сатана - 7200 ₽
-                    img.stuff__photo(src= './pages/market/img/1-3.jpg', alt='pegasus')
+                    img.stuff__photo(src= './blocks/market/market__stuffs/img/1-3.jpg', alt='pegasus')
                     .stuff__description.
                             Пегас выполнен в технике сухого валяния. Шерсть натуральная 100 %.  Глаза стеклянные. Крылья , натуральные перья. Размер 15 ×17 ×5 см. Отличный подарок или сувенир на любой случай. Почтовая пересылка 250 руб. 
                     .stuff__buy-button
@@ -49,3 +48,4 @@ html(lang="en")
                 adress: 'Фрунзе 11б',
                 theme: 'stuff'
             })
+        script(src= 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAfaOl0X5qQf4yJIocRvRey0yE9liHwVIA')
