--- a/src/blocks/event/event.pug
+++ b/src/blocks/event/event.pug
@@ -5,7 +5,7 @@ mixin event(options)
         - options = {}
     .event
         .event__photo-frame
-            img.event__photo(src= options.imgsrc ? options.imgsrc : '.\\blocks\\event\\img\\event__default-img.jpg' alt='event')
+            img.event__photo(src= options.imgsrc ? options.imgsrc : '..\\..\\blocks\\event\\img\\event__default-img.jpg' alt='event')
         .event__text(class= options.theme ? 'event_theme_' + options.theme : '')
             .event__date
                 .event__day= options.day ? options.day : '1'
