--- a/src/blocks/news/news.pug
+++ b/src/blocks/news/news.pug
@@ -3,7 +3,7 @@ mixin news(options)
         - options = {}
     .news
         .news__photo-frame
-            img.news__photo(src= options.imgsrc ? options.imgsrc : ".\\blocks\\news\\img\\news__default-img.jpg" alt='news')
+            img.news__photo(src= options.imgsrc ? options.imgsrc : "..\\..\\blocks\\news\\img\\news__default-img.jpg" alt='news')
         .news__text(class= options.theme ? "news_theme_" + options.theme : '')
             .news__title= options.title ? options.title : 'Title'
             .news__date= options.date ? options.date : 'Date'
