--- a/src/blocks/seller-stuff/seller-stuff.pug
+++ b/src/blocks/seller-stuff/seller-stuff.pug
@@ -2,7 +2,8 @@ include ../standart-button/standart-button.pug
 
 mixin seller-stuff(options)
     .seller-stuff
-        img.seller-stuff__img(src= options.imgsrc)
-        a.seller-stuff__name(href=options.name)= options.name
+        img.seller-stuff__img(src= options.imgsrc, alt=options.name)
+        div.seller-stuff__name
+            a.seller-stuff__link(href=options.name)= options.name
         div.seller-stuff__price= options.price + ' ₽'
         +standart-button({type: 'normal', size: 'normal', text: 'купить', theme: 'buy'})
