--- a/src/blocks/seller-stuff/seller-stuff.styl
+++ b/src/blocks/seller-stuff/seller-stuff.styl
@@ -1,3 +1,5 @@
+stuff_width = 180px;
+
 .seller-stuff
     flex-direction: column;
     align-items: center;
@@ -10,9 +12,10 @@
             font-family: LatoWebBlack, 'Arial'
 
     &__img
-        width: 180px;
+        width: stuff_width;
         height: 150px;
 
     &__name
         margin: 3% 0;
-    
+        max-width: stuff_width;
+        text-align: center;
