--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,9 @@ html(lang="en")
       meta(charset="UTF-8")
       link(rel="icon" type="image/vnd.microsoft.icon" href='favicon.ico')
       link(rel='mask-icon' href='images/fav.svg' color='red')
+      meta(name="description" content="Flat UI")
+      meta(name="keywords" content="FlatUI,UI,Flat,Market")
+      meta(name='author' content="Alexey Zhamylik")
       meta(name="viewport", content="width=device-width, initial-scale=1.0")
       meta(http-equiv="X-UA-Compatible", content="ie=edge")
       title Путеводитель
