--- a/src/pages/market/market.pug
+++ b/src/pages/market/market.pug
@@ -9,6 +9,10 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        meta(name="description" content="Market page")
+        meta(name="keywords" content="Stuff,Market,Sellers")
+        meta(name='author' content="Alexey Zhamylik")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Craft Market
         link(rel="icon" type="image/vnd.microsoft.icon" href='favicon.ico')
         link(rel='mask-icon' href='images/fav.svg' color='red')
