--- a/src/pages/main/main.pug
+++ b/src/pages/main/main.pug
@@ -20,9 +20,13 @@ include ../../blocks/video/video.pug
 doctype html
 html(lang="en")
   head
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1") 
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="description" content="FlatUI page")
+    meta(name="keywords" content="FlatUI,UI")
+    meta(name='author' content="Alexey Zhamylik")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Site_2
     script(src= 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAfaOl0X5qQf4yJIocRvRey0yE9liHwVIA')
     link(rel="icon" type="image/vnd.microsoft.icon" href='favicon.ico')
