--- a/src/pages/order/order.pug
+++ b/src/pages/order/order.pug
@@ -12,6 +12,10 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        meta(name="description" content="Order page")
+        meta(name="keywords" content="Order,Stuff,Market")
+        meta(name='author' content="Alexey Zhamylik")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Оформление заказа
         link(rel="icon" type="image/vnd.microsoft.icon" href='favicon.ico')
         link(rel='mask-icon' href='images/fav.svg' color='red')
