--- a/src/pages/seller/seller.pug
+++ b/src/pages/seller/seller.pug
@@ -11,6 +11,10 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        meta(name="description" content="Seller page")
+        meta(name="keywords" content="Seller,Stuff,Market")
+        meta(name='author' content="Alexey Zhamylik")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Андрей Иванов
         link(rel="icon" type="image/vnd.microsoft.icon" href='favicon.ico')
         link(rel='mask-icon' href='images/fav.svg' color='red')
