--- a/src/blocks/market-helper/market-helper.pug
+++ b/src/blocks/market-helper/market-helper.pug
@@ -8,6 +8,6 @@ mixin market-helper()
                     theme_name: 'helper',
                     theme_info: 'helper',
                     name: 'Support',
-                    photo: '..\\..\\blocks\\market-helper\\img\\helper.jpg',
+                    photo: '../../blocks/market-helper/img/helper.jpg',
                     theme: 'helper'
                 })
