--- a/src/pages/seller/seller.pug
+++ b/src/pages/seller/seller.pug
@@ -32,7 +32,7 @@ html(lang="en")
             })
             +seller-messager({
                 name: 'Андрей Иванов',
-                photo: '..\\..\\blocks\\user-profile\\img\\av1.jpg',
+                photo: '../../blocks/user-profile/img/av1.jpg',
                 theme_button: 'seller',
                 theme_name: 'seller',
                 theme_info: 'seller'
@@ -42,7 +42,7 @@ html(lang="en")
                 +event({
                     title: 'СКИДКА НА СТЕКЛО',
                     day: '17',
-                    imgsrc: '..\\..\\blocks\\event\\img\\glass.jpg',
+                    imgsrc: '../../blocks/event/img/glass.jpg',
                     month: 'Фев',
                     description: 'Скидка 40% на все товары из стекла.',
                     btn_text: 'Получить',
@@ -54,14 +54,14 @@ html(lang="en")
                     theme: 'black',
                     title: 'Игрушки из фетра',
                     date: '9 февраля 2017',
-                    imgsrc: '..\\..\\blocks\\news\\img\\felt.jpeg',
+                    imgsrc: '../../blocks/news/img/felt.jpeg',
                     description: 'В продажу поступили игрушки из фетра!'
                 })
                 +news({
                     theme: 'black',
                     title: 'Железо',
                     date: '15 декабря 2017',
-                    imgsrc: '..\\..\\blocks\\news\\img\\heli.jpg',
+                    imgsrc: '../../blocks/news/img/heli.jpg',
                     description: 'Распродажа поделок из советского конструктора.'
                 })
             .seller__text товар
