--- a/src/pages/main/main.styl
+++ b/src/pages/main/main.styl
@@ -68,25 +68,25 @@
     clear: both;
 
 @media screen and (max-width: 700px) {
-    html, body {
+    html, 
+    body {
         padding: 0;
         margin: 0;
     }
-  .main {
-    width: 250px;
-  }
-      .main__left {
+    .main {
+        width: 250px;
+    }
+    .main__left {
         float: none;
         width: inherit;
         display: flex;
         flex-direction: column;
         align-items: center;
         padding-right: 0;
-  }
-
-  .main__right {
-        float: none;
-        width: inherit;
-        padding-left: 0;
-  }
+    }
+    .main__right {
+            float: none;
+            width: inherit;
+            padding-left: 0;
+    }
 }
